Create form and success page stubs

--- a/buyer-success.html
+++ b/buyer-success.html
@@ -20,19 +20,24 @@
             <div class="container">
                 <div class="hero__content">
                     <div class="hero__content__inner" id='navConverter'>
-                        <img src="./images/binkleylogo.png" class="hero__center__logo">
-                        <p class="hero__text"><em>"Nathan's success in real estate is driven by his professionalism, outgoing personality, communication skills, and most importantly his dedication to achieving his client's goals.  Whether you're a buyer, a seller or a potential client, he will keep the lines of communication open and attend to  your needs."</em></p>
+                        <h1 class="hero__title">Hooray!</h1>
+                        <img src="https://media.giphy.com/media/JltOMwYmi0VrO/giphy-downsized.gif" class="rounded">
+                        <p style='opacity: 0.8;'>(This is how we feel right now)</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Steps - obviously not steps anymore -->
-    <div class="steps landing__section buysell">
+    <div class="landing__section buysell">
         <div class="container">
-            <h2>I want to...</h2>
-            <a href="./buyer-info.html" class="button button__accent">Buy a place</a>
-            <a href="./buyer-info.html" class="button button__accent">Sell a place</a>
+          <h3>What You Can Expect Next</h3>
+          <p>
+            <ol>
+              <li><strong>Someone will reach out to you <em>today</em></strong> - Yep, that's right! We're actually super responsive and we'll never ignore you!</li>
+              <li><strong>We'll set up a time to sit down with you in person to discuss your goals</strong> - We do this with our clients so we can make sure that we're actual providing great value and helping them find a home they'll love.</li>
+              <li><strong>An amazing, personalized, concierge service from first contact all the way through closing</strong> - Working with real estate agents can be a great experience or an awful one. We'll be honest, transparent, and responsive throughout the entire process.</li>
+            </ol>
+          </p>
         </div>
     </div>
     <!-- Footer -->
