--- a/buyer-info.html
+++ b/buyer-info.html
@@ -6,6 +6,7 @@
     <title>Binkley Residential - Chicago Homes for Sale | Local Agents | Chicago Real Estate</title>
     <link rel='stylesheet' href='css/style.css' />
     <link rel='stylesheet' href='css/global.css' />
+    <link rel='stylesheet' href='css/info.css' />
 </head>
 <body>
     <!-- navbar -->
@@ -22,11 +23,12 @@
         <div class="container">
             <div class="auth__inner">
                 <div class="auth__media">
-                    <img src="./images/undraw_selfie.svg">
+                    <img class="rounded" src="./images/chicago.png">
+                    <!-- placeholder need to get permission from http://www.lynsdescardes.com/chicago/ -->
                 </div>
                 <div class="auth__auth">
                     <h1 class="auth__title">Get Started</h1>
-                    <p>Start by sending us some basic information, then we'll contact you ASAP to set up an in person coffee meeting to better understand your needs.</p>
+                    <p class='left-justify'>Start by sending us some basic information, then we'll contact you ASAP to set up an in person coffee meeting to better understand your needs.</p>
                     <form method='get' action="buyer-success.html" autocompelete="new-password" role="presentation" class="form">
                         <div class="double">
                           <div class="half">
