--- a/buyer-info.html
+++ b/buyer-info.html
@@ -30,14 +30,13 @@
                     <h1 class="auth__title">Get Started</h1>
                     <p class='left-justify'>Start by sending us some basic information, then we'll contact you ASAP to set up an in person coffee meeting to better understand your needs.</p>
                     <form method='get' action="buyer-success.html" autocompelete="new-password" role="presentation" class="form">
+                       <label for="first">Name</label>
                         <div class="double">
                           <div class="half">
-                             <label for="first">First</label>
-                             <input type="text" id="first" placeholder="Type...">
+                             <input type="text" id="first" placeholder="First">
                           </div>
                           <div class="half">
-                            <label for="second">Last</label>
-                            <input type="text" id="second" placeholder="Type...">
+                            <input type="text" id="second" placeholder="Last">
                           </div>
                         </div>
                         <label>Birthday</label>
@@ -69,7 +68,7 @@
                             </div><!-- /double -->
                           </div><!-- /half -->
                         </div><!-- /double -->
-                        <label>Some Select</label>
+                        <label>Select</label>
                         <select>
                           <option value="1">Option 1</option>
                           <option value="2">Option 2</option>
@@ -78,8 +77,6 @@
                         <input name="email" class="fakefield">
                         <label>Email</label>
                         <input type="text" name="email" id='email' placeholder="you@example.com">
-                        <label>Password</label>
-                        <input type="password" name="password" id='password' placeholder="&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;" autocomplete="off">
                         <button type='submit' class="button button__accent fullwidth">Get Started</button>
                     </form>
                 </div>
