use type=tel for numeric fields for phones

--- a/buyer-info.html
+++ b/buyer-info.html
@@ -66,11 +66,11 @@
                             <div class="double">
                               <div class="half">
                                 <label>Day</label>
-                                <input type="text" name='dobDay'>
+                                <input type="tel" name='dobDay'>
                               </div><!-- /half -->
                               <div class="half">
                                 <label>Year</label>
-                                <input type="text" name='dobYear'>
+                                <input type="tel" name='dobYear'>
                               </div><!-- /half -->
                             </div><!-- /double -->
                           </div><!-- /half -->
@@ -98,7 +98,7 @@
                               </div><!-- /half -->
                               <div class="half">
                                 <label>Zip</label>
-                                <input type="text" name="currentAddressZipCode" placeholder="Zip">
+                                <input type="tel" name="currentAddressZipCode" placeholder="Zip">
                               </div><!-- /half -->
                             </div><!-- double -->
                           </div><!-- half -->
