Use actual binkley logo

--- a/buyer-info.html
+++ b/buyer-info.html
@@ -14,7 +14,7 @@
         <nav class="nav__mobile"></nav>
         <div class="container">
             <div class="navbar__inner">
-                <img class="navbar__logo" src="./images/logoaltwhite.svg">Binkley Residential
+                <img class="navbar__logo" src="./images/logo-white-navbar.svg">Binkley Residential
             </div>
         </div>
     </div>
