--- a/buyer-info.html
+++ b/buyer-info.html
@@ -143,7 +143,7 @@
       if (response.target.status === 200) {
         // The form submission was successful
         form.reset();
-        window.location = 'buyer-success.html';
+        window.location = 'success.html';
       } else {
         // The form submission failed
         formResponse.style.display = 'block'
